## Makefile.am for src/ui/edit

bin_PROGRAMS=buzztard-edit

buzztard_edit_LDADD = \
	$(top_builddir)/src/lib/core/libbuzztard-core.la \
    $(top_builddir)/src/lib/ic/libbuzztard-ic.la \
	libbtedit.la \
	$(BASE_DEPS_LIBS) $(GUI_DEPS_LIBS) $(BT_LIBS) \
	-lgstinterfaces-0.10
buzztard_edit_SOURCES= \
	bt-edit.c bt-edit.h

# these sources (also mentioned above) are generated.
BUILT_SOURCES = marshal.h marshal.c

noinst_LTLIBRARIES		= libbtedit.la
noinst_HEADERS			= marshal.h
libbtedit_la_LIBADD = \
	$(top_builddir)/src/lib/core/libbuzztard-core.la \
	$(top_builddir)/src/lib/ic/libbuzztard-ic.la \
	$(BASE_DEPS_LIBS) $(GUI_DEPS_LIBS) $(BT_LIBS) \
	-lgstinterfaces-0.10
libbtedit_la_SOURCES	= \
	about-dialog.c about-dialog.h about-dialog-methods.h \
	change-log.c change-log.h change-log-methods.h \
	change-logger.c change-logger.h change-logger-methods.h \
	crash-recover-dialog.c crash-recover-dialog.h crash-recover-dialog-methods.h \
	edit-application.c edit-application.h edit-application-methods.h \
	interaction-controller-menu.c interaction-controller-menu.h interaction-controller-menu-methods.h \
	interaction-controller-learn-dialog.c interaction-controller-learn-dialog.h interaction-controller-learn-dialog-methods.h \
	machine-canvas-item.c machine-canvas-item.h machine-canvas-item-methods.h\
	machine-menu.c machine-menu.h machine-menu-methods.h \
	machine-actions.c machine-actions.h \
	machine-list-model.c machine-list-model.h machine-list-model-methods.h \
	machine-preset-properties-dialog.c machine-preset-properties-dialog.h machine-preset-properties-dialog-methods.h \
	machine-properties-dialog.c machine-properties-dialog.h machine-properties-dialog-methods.h \
	machine-preferences-dialog.c machine-preferences-dialog.h machine-preferences-dialog-methods.h \
	machine-rename-dialog.c machine-rename-dialog.h machine-rename-dialog-methods.h \
	main-window.c main-window.h main-window-methods.h \
	main-menu.c main-menu.h main-menu-methods.h \
	main-toolbar.c main-toolbar.h main-toolbar-methods.h \
	main-pages.c main-pages.h main-pages-methods.h \
	main-page-machines.c main-page-machines.h main-page-machines-methods.h \
	main-page-patterns.c main-page-patterns.h main-page-patterns-methods.h \
	main-page-sequence.c main-page-sequence.h main-page-sequence-methods.h \
	main-page-waves.c main-page-waves.h main-page-waves-methods.h \
	main-page-info.c main-page-info.h main-page-info-methods.h \
	main-statusbar.c main-statusbar.h main-statusbar-methods.h \
	missing-framework-elements-dialog.c missing-framework-elements-dialog.h missing-framework-elements-dialog-methods.h \
	missing-song-elements-dialog.c missing-song-elements-dialog.h missing-song-elements-dialog-methods.h \
	object-list-model.c object-list-model.h object-list-model-methods.h \
	panorama-popup.c panorama-popup.h \
	pattern-properties-dialog.c pattern-properties-dialog.h pattern-properties-dialog-methods.h \
	playback-controller-socket.c playback-controller-socket.h playback-controller-socket-methods.h \
	sequence-view.c sequence-view.h sequence-view-methods.h \
	render-dialog.c render-dialog.h render-dialog-methods.h \
	render-progress.c render-progress.h render-progress-methods.h \
	settings-dialog.c settings-dialog.h settings-dialog-methods.h \
	settings-page-audiodevices.c settings-page-audiodevices.h settings-page-audiodevices-methods.h \
	settings-page-directories.c settings-page-directories.h settings-page-directories-methods.h \
	settings-page-interaction-controller.c settings-page-interaction-controller.h settings-page-interaction-controller-methods.h \
	settings-page-playback-controller.c settings-page-playback-controller.h settings-page-playback-controller-methods.h \
	signal-analysis-dialog.c signal-analysis-dialog.h signal-analysis-dialog-methods.h \
	tip-dialog.c tip-dialog.h tip-dialog-methods.h \
	tools.c tools.h \
	ui-resources.c ui-resources.h ui-resources-methods.h \
	volume-popup.c volume-popup.h \
	wave-viewer.c wave-viewer.h \
	wire-canvas-item.c wire-canvas-item.h wire-canvas-item-methods.h \
	\
	pattern-editor.c pattern-editor.h \
	gtkvumeter.c gtkvumeter.h \
	\
	btmemoryaudiosrc.c btmemoryaudiosrc.h \
	\
	marshal.c

AM_CPPFLAGS = \
	-I$(top_srcdir)/src/lib/core \
	-I$(top_srcdir)/src/lib/ic \
	-DPREFIX=\"$(prefix)\" \
	-DSYSCONFDIR=\"$(sysconfdir)\" \
	-DLOCALEDIR=\"$(localedir)\" \
	-DLIBDIR=\"$(libdir)\" \
	-DDATADIR=\"$(datadir)\" \
	-DG_LOG_DOMAIN=\"buzztard\" \
	$(BASE_DEPS_CFLAGS) \
	$(GUI_DEPS_CFLAGS) \
	$(BT_CFLAGS)

desktopdir = ${with_desktop_dir}/applications
desktop_DATA = buzztard-edit.desktop
@INTLTOOL_DESKTOP_RULE@

# FIXME: don't install bt-edit.hildon.gtkrc on non hildon
gtkrcdir = $(datadir)/$(PACKAGE)
gtkrc_DATA = bt-edit.gtkrc bt-edit.hildon.gtkrc

marshal.h: marshal.list
	glib-genmarshal --header --prefix=bt_marshal $(srcdir)/marshal.list > marshal.h

marshal.c: marshal.list
	glib-genmarshal --body --prefix=bt_marshal $(srcdir)/marshal.list > marshal.c

# CLEANFILES is for files generated by make
CLEANFILES = buzztard-edit.desktop marshal.c marshal.h
EXTRA_DIST = buzztard-edit.desktop.in $(gtkrc_DATA) marshal.list

# update desktop database
install-data-hook:
	test -z "$(UPDATE_DESKTOP_DATABASE)" || $(UPDATE_DESKTOP_DATABASE) "$(DESTDIR)$(desktopdir)";
uninstall-local:
	test -z "$(UPDATE_DESKTOP_DATABASE)" || $(UPDATE_DESKTOP_DATABASE) "$(DESTDIR)$(desktopdir)";

.PHONY: help todo stats splint

todo::
	@find . \( -name "*.c" -o -name "*.h" \) -exec grep -Hno "@todo .*" {} \; | sed "s/@todo/error:/"
	@find . \( -name "*.c" -o -name "*.h" \) -exec grep -Hno "@idea .*" {} \; | sed "s/@idea/warning:/"

stats:: tags
	@echo "files by size:"
	@find . \( -name "*.c" -o -name "*.h" \) -printf "%s %p\n" | sort -rn
	@echo
	@echo "files by tags:"
	@for file in *.c; do size=`grep $${file} tags | wc -l`;echo $${size} $${file}; done | sort -rn

splint::
	splint +posixlib -weak -I$(top_builddir) $(AM_CPPFLAGS) $(libbtedit_la_SOURCES)

help::
	@echo "make todo                    -- generate a list of TODO items in the form of gcc error/warnings"
	@echo "make stats                   -- run source code stats"
	@echo "make splint                  -- run splint source code checks"
