## Makefile.am for src/lib/core

libbtcoredir = $(includedir)/libbtcore
libbtcore_HEADERS = \
	core.h \
	tools.h \
	version.h \
	\
	application.h application-methods.h \
	gconf-settings.h gconf-settings-methods.h \
	machine.h machine-methods.h \
	pattern.h pattern-methods.h \
	plainfile-settings.h plainfile-settings-methods.h \
	processor-machine.h processor-machine-methods.h \
	sequence.h sequence-methods.h \
	settings.h settings-methods.h \
	setup.h setup-methods.h \
	sink-machine.h sink-machine-methods.h \
	song.h song-methods.h \
	song-info.h song-info-methods.h \
	song-io.h song-io-methods.h \
	song-io-native.h song-io-native-methods.h \
	source-machine.h source-machine-methods.h \
	wavetable.h wavetable-methods.h \
	wave.h wave-methods.h \
	wavelevel.h wavelevel-methods.h \
	wire.h wire-methods.h \
  ../marshal.h
