## $Id: Makefile.am,v 1.6 2007-04-04 18:47:44 ensonic Exp $

libbtcoredir = $(includedir)/libbtic
libbtcore_HEADERS = \
	ic.h \
	version.h \
	registry.h registry-methods.h \
	\
	device.h device-methods.h \
	input-device.h input-device-methods.h \
	midi-device.h midi-device-methods.h \
    \
    control.h control-methods.h \
    trigger-control.h trigger-control-methods.h
