## $Id$

libbtcoredir = $(includedir)/libbtic
libbtcore_HEADERS = \
	ic.h \
	version.h \
	registry.h registry-methods.h \
        learn.h learn-methods.h \
	\
	device.h device-methods.h \
	input-device.h input-device-methods.h \
	midi-device.h midi-device-methods.h \
	\
	control.h control-methods.h \
	abs-range-control.h abs-range-control-methods.h \
	trigger-control.h trigger-control-methods.h
